added serach option

--- a/index.html
+++ b/index.html
@@ -10,15 +10,56 @@
 </head>
 <body>
 
-<div class='main_menu'>
-	<nav role="navigation">
-    <a class="active" href="#">Home</a>
-    <a class="active" href="#">Posts</a>
-    <a class="active" href="#">Series</a>
-    <a class="active" href="#">Libraries</a>
-    <a class="active" href="#">Snippets</a>
-  </nav>
+<div class='main_menu_wrapper'>
+	<div class='main_menu'>
+		<div class='logo'>
+			<a href='#'>Polo <span>dev</span></a>
+		</div>
+		<div class='navigation_form'>
+			<nav role="navigation">
+		    <a class="active" href="#">Posts</a>
+		    <a class="active" href="#">Series</a>
+		    <a class="active" href="#">Libraries</a>
+		    <a class="active" href="#">Snippets</a>
+		  </nav>
+		  <div class="form_div">
+		  	<input type='text' placeholder="search..." />
+		  	<div id='search_result'>
+		  		<section>
+		  			<p>Series</p>
+		  			<ul>
+		  				<li><a href='#'>php and html</a></li>
+		  				<li><a href='#'>php and html</a></li>
+		  				<li><a href='#'>php and html</a></li>
+		  			</ul>
+		  		</section>
+		  		<!-- /.series -->
+		  		<section>
+		  			<p>Libraries</p>
+		  			<ul>
+		  				<li><a href='#'>php and html</a></li>
+		  				<li><a href='#'>php and html</a></li>
+		  			</ul>
+		  		</section>
+		  		<!-- /.series -->
+		  		<section>
+		  			<p>Snippets</p>
+		  			<ul>
+		  				<li><a href='#'>php and html</a></li>
+		  				<li><a href='#'>php and html</a></li>
+		  				<li><a href='#'>php and html</a></li>
+		  				<li><a href='#'>php and html</a></li>
+		  			</ul>
+		  		</section>
+		  		<!-- /.series -->
+		  	</div>
+		  	<!-- /#search_result -->
+		  </div>
+		</div>
+		<!-- /.navigation_form -->
+	</div>
 </div>
+<!-- /.main_menu_wrapper -->
 <div class='wrapper'>
 	<div id="sidebar">
 		<div id="sidebar-btn">
